--- a/views/admin/kpi/page_edit_balls_kpi.ejs
+++ b/views/admin/kpi/page_edit_balls_kpi.ejs
@@ -2,15 +2,7 @@
 <html>
 <head>
 	<title>Изменить оценки</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
-
+	<%- include("../partials/head.ejs")%>
 </head>
 <body>
 	<div class="wrapper">
@@ -78,8 +70,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="./editballs.js"></script>
+	<%- include("../partials/scripts.ejs")%>
+	<script type="text/javascript" src="./edit_balls.js"></script>
 
 </body>
 </html>
