--- a/views/admin/partials/settings-menu.ejs
+++ b/views/admin/partials/settings-menu.ejs
@@ -1,8 +1,8 @@
 <div class="widget">
     <h3>Настройки</h3>
     <ul>
-      <li><a href="/admin/set_period">Текущий период</a></li>
-      <li><a href="/admin/close_accounts">Доступ к ЛК</a></li>
-      <li><a href="/admin/change_password">Изменить пароль</a></li>
+      <li><a href="/admin/set-period">Текущий период</a></li>
+      <li><a href="/admin/close-accounts">Доступ к ЛК</a></li>
+      <li><a href="/admin/change-password">Изменить пароль</a></li>
     </ul>
   </div>
