--- a/views/admin/settings/page_set_period.ejs
+++ b/views/admin/settings/page_set_period.ejs
@@ -2,15 +2,8 @@
 <html>
 <head>
 	<title>Установка периода</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
+	<%- include("../partials/head.ejs")%>
 	<link rel="stylesheet" type="text/css" href="/general_style/vertical-menu.css">
-	
 </head>
 <body>
 	<div class="wrapper">
@@ -48,8 +41,8 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
-	
-	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+
+	<%- include("../partials/scripts.ejs")%>
 	<script type="text/javascript" src="./set_period.js"></script>
 
 
