--- a/views/admin/structure/page_update_structure.ejs
+++ b/views/admin/structure/page_update_structure.ejs
@@ -2,14 +2,7 @@
 <html>
 <head>
 	<title>Обновление структуры</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
+	<%- include("../partials/head.ejs")%>
 </head>
 <body>
 	<div class="wrapper">
@@ -39,6 +32,8 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
+
+	<%- include("../partials/scripts.ejs")%>
 	
 </body>
 </html>
