--- a/views/admin/users/page_add_users_from_file.ejs
+++ b/views/admin/users/page_add_users_from_file.ejs
@@ -2,13 +2,7 @@
 <html>
 <head>
 	<title>Добавление пользователей</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
+	<%- include("../partials/head.ejs")%>
 </head>
 <body>
 	<div class="wrapper">
@@ -26,7 +20,7 @@
 				<p>В столбце <b>E</b> указывается <i>уникальный</i> логин сотрудника*</p>
 				<p>В столбце <b>F</b> указывается пароль сотрудника*</p>
 				<p>* - обязательные к заполнению поля</p>
-			</div class="warning">
+			</div>
 			<% if(action == 1) {%>
 				<p class="uspeshno">Успешно</p>
 			<%} %>
@@ -49,6 +43,7 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
-	
+
+	<%- include("../partials/scripts.ejs")%>
 </body>
 </html>
