--- a/views/pps/page_values_kpi.ejs
+++ b/views/pps/page_values_kpi.ejs
@@ -2,12 +2,7 @@
 <html>
 <head>
 	<title>Значения ПЭД</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
+	<%- include("partials/head.ejs")%>
 </head>
 <body>
 	<div class="wrapper">
@@ -36,7 +31,7 @@
 							<td><%=kpi[i].value%></td>
 							<td><%=kpi[i].text %></td>
 							<% if(kpi[i].file) {%>
-								<td><a href=<%="/upload_file?file="+kpi[i].file %> download=""><img src="/img/download.png" alt="Скачать файл"></a></td>
+								<td><a href=<%="/upload-file?file="+kpi[i].file %> download=""><img src="/img/download.png" alt="Скачать файл"></a></td>
 							<%} %>
 							<% if(!kpi[i].file) {%>
 								<td></td>
@@ -69,5 +64,7 @@
 			<%- include("../partials/footer.ejs") %>
 		</div>
 	</div>
+
+	<%- include("partials/scripts.ejs")%>
 </body>
 </html>
