--- a/public/general_style/form.css
+++ b/public/general_style/form.css
@@ -1,28 +1,42 @@
 * {box-sizing: border-box;}
+
+.parent {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: auto;
+	white-space: nowrap;
+	text-align: center;
+	font-size: 0;
+
+&:before {
+	 height: 100%;
+	 display: inline-block;
+	 vertical-align: middle;
+	 content: '';
+ }
+}
+
+.block {
+	display: inline-block;
+	white-space: normal;
+	vertical-align: middle;
+	text-align: left;
+
+}
 .form-add {
 	position: relative;
-	margin: 3% 13%;
 	background: white;
 	border-radius: 30px;
 	border: 2px solid #A1B9D5;
 	color: black;
 	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
 }
-
-.circle {
-	position: absolute;
-	bottom: 80px;
-	left: -55px;
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	background: white;
-	box-shadow: 0 2px 4px 1px rgba(0,0,0,0.2), 1px 3px 15px 1px rgba(0,0,0,0.1);
-}
 .form-inner { 
-	padding: 15px; 
-	margin-left: 10%;
-	margin-right: 50px;}
+	padding: 15px;
+}
 .form-inner input,
 .form-inner select {
 	display: block;
