--- a/views/admin/kpi/page_add_kpi.ejs
+++ b/views/admin/kpi/page_add_kpi.ejs
@@ -2,14 +2,9 @@
 <html>
 <head>
 	<title>Добавление Показателя</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
-	<link rel="stylesheet" type="text/css" href="./addkpi.css">
+	<%- include("../partials/head.ejs")%>
 
+	<link rel="stylesheet" type="text/css" href="./add_kpi.css">
 	<link rel="stylesheet" type="text/css" href="/plugins/slick-1.8.1/slick/slick.css">
 	<link rel="stylesheet" type="text/css" href="/plugins/slick-1.8.1/slick/slick-theme.css">
 </head>
@@ -31,8 +26,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<%- include("../partials/scripts.ejs")%>
 	<script type="text/javascript" src="/plugins/slick-1.8.1/slick/slick.min.js"></script>
-	<script type="text/javascript" src="./addkpi.js"></script>
+	<script type="text/javascript" src="./add_kpi.js"></script>
 </body>
 </html>
