--- a/views/admin/kpi/page_add_past_kpi.ejs
+++ b/views/admin/kpi/page_add_past_kpi.ejs
@@ -2,15 +2,9 @@
 <html>
 <head>
 	<title>Добавление прошлых значений</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/form.css">
+	<%- include("../partials/head.ejs")%>
+
 	<link rel="stylesheet" type="text/css" href="/general_style/loader.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -52,7 +46,7 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
-	<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+	<%- include("../partials/scripts.ejs")%>
 	<script type="text/javascript" src="/plugins/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
 	<script type="text/javascript" src="/scripts/loader.js"></script>
 </body>
