--- a/views/admin/kpi/page_table_kpi.ejs
+++ b/views/admin/kpi/page_table_kpi.ejs
@@ -2,13 +2,7 @@
 <html>
 <head>
 	<title>Список Показателей</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
+	<%- include("../partials/head.ejs")%>
 </head>
 <body>
 	<div class="wrapper">
@@ -83,6 +77,8 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
+
+	<%- include("../partials/scripts.ejs")%>
 	
 </body>
 </html>
