--- a/views/admin/partials/menu.ejs
+++ b/views/admin/partials/menu.ejs
@@ -4,31 +4,31 @@
 		<li><a href="/admin" style="border-left: 1px solid rgb(175, 175, 173);">Главная</a></li>
 		<li><a>Сотрудники</a>
 			<ul>
-				<li><a href="/admin/users/get_users">Список</a></li>
-				<li><a href="/admin/users/add_user">Добавить</a></li>
-				<li><a href="/admin/users/add_users_from_file">Добавить с файла</a></li>
-				<li><a href="/admin/users/add_users_from_file2">Добавить с файла вариант 2</a></li>
-				<li><a href="/admin/users/delete_user">Удалить</a></li>
+				<li><a href="/admin/users/get-users">Список</a></li>
+				<li><a href="/admin/users/add-user">Добавить</a></li>
+				<li><a href="/admin/users/add-users-from-file">Добавить с файла</a></li>
+				<li><a href="/admin/users/add-users-from-file2">Добавить с файла вариант 2</a></li>
+				<li><a href="/admin/users/delete-user">Удалить</a></li>
 			</ul>
 		</li>
 		
 		<li><a>ПЭД</a>
 			<ul>
-				<li><a href="/admin/kpi/get_kpi">Список</a></li>
-				<li><a href="/admin/kpi/add_kpi">Добавить</a></li>
-				<li><a href="/admin/kpi/delete_kpi">Удалить</a></li>
-				<li><a href="/admin/kpi/edit_balls">Изменить оценки</a></li>
-				<li><a href="/admin/kpi/past_kpi">Добавить прошлые значения</a></li>
+				<li><a href="/admin/kpi/get-kpi">Список</a></li>
+				<li><a href="/admin/kpi/add-kpi">Добавить</a></li>
+				<li><a href="/admin/kpi/delete-kpi">Удалить</a></li>
+				<li><a href="/admin/kpi/edit-balls">Изменить оценки</a></li>
+				<li><a href="/admin/kpi/past-kpi">Добавить прошлые значения</a></li>
 			</ul>
 		</li>
-		<li><a href="/admin/get_balls_of_users">Значения ПЭД</a></li>
+		<li><a href="/admin/get-balls-of-users">Значения ПЭД</a></li>
 		<li><a>Структура университета</a>
 			<ul>
-				<li><a href="/admin/get_structure">Список</a></li>
-				<li><a href="/admin/update_structure">Обновить</a></li>
+				<li><a href="/admin/get-structure">Список</a></li>
+				<li><a href="/admin/update-structure">Обновить</a></li>
 			</ul>
 		</li>
-		<li><a href="/admin/set_period">Настройки</a></li>
+		<li><a href="/admin/set-period">Настройки</a></li>
 		<li><form action="/exit" method="post"><button>Выход</button></form></li>
 	</ul>
 </nav>
