--- a/views/admin/settings/page_change_password.ejs
+++ b/views/admin/settings/page_change_password.ejs
@@ -2,14 +2,8 @@
 <html>
 <head>
 	<title>Изменить пароль</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<%- include("../partials/head.ejs")%>
 	<link rel="stylesheet" type="text/css" href="/general_style/vertical-menu.css">
-    <link rel="stylesheet" type="text/css" href="/general_style/common.css">
-    <link rel="stylesheet" type="text/css" href="/general_style/form.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -45,7 +39,8 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
     </div>
-    <script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+
+	<%- include("../partials/scripts.ejs")%>
 	<script type="text/javascript" src="/scripts/settings.js"></script>
 </body>
 </html>
