--- a/views/admin/settings/page_close_account.ejs
+++ b/views/admin/settings/page_close_account.ejs
@@ -2,13 +2,8 @@
 <html>
 <head>
 	<title>Закрыть кабинеты</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
+	<%- include("../partials/head.ejs")%>
 	<link rel="stylesheet" type="text/css" href="/general_style/vertical-menu.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/common.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -38,5 +33,7 @@
 			<%- include("../../partials/footer.ejs") %>
 		</div>
 	</div>
+
+	<%- include("../partials/scripts.ejs")%>
 </body>
 </html>
