--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="general_style/form.css">
 </head>
 <body>
-	<div class="auth">
+<div class="parent">
+	<div class="block">
 	<form name="authorizForm" action="/user" method="POST" class="form-add">
 		<div class="form-inner">
 			<img src="/img/logo.png" alt="Логотип МТУСИ">
@@ -26,6 +27,7 @@
 		</div>
 	</form>
 	</div>
+</div>
 	<style type="text/css">
 		body, html {
 			background: rgb(241, 241, 241);
@@ -34,6 +36,11 @@
 			color: red;
 		}
 	</style>
+
+			<script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	
 </body>
 </html>
