--- a/views/pps/page_settings.ejs
+++ b/views/pps/page_settings.ejs
@@ -2,13 +2,7 @@
 <html>
 <head>
 	<title>Настройки</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/general_style/list.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/footer.css">
-	<link rel="stylesheet" type="text/css" href="/general_style/stylebut.css">
-    <link rel="stylesheet" type="text/css" href="/general_style/menu.css">
-    <link rel="stylesheet" type="text/css" href="/general_style/form.css">
+    <%- include("partials/head.ejs")%>
 </head>
 <body>
 	<div class="wrapper">
@@ -41,7 +35,8 @@
 			<%- include("../partials/footer.ejs") %>
 		</div>
     </div>
-    <script type="text/javascript" src="/plugins/jquery-3.3.1.min.js"></script>
+
+    <%- include("partials/scripts.ejs")%>
 	<script type="text/javascript" src="/scripts/settings.js"></script>
 </body>
 </html>
