--- a/views/pps/partials/table_kpi.ejs
+++ b/views/pps/partials/table_kpi.ejs
@@ -1,41 +1,45 @@
 <% if(kpi) {%>
-<h3 class="tekuchiepokaz">Текущие показатели ПЭД:</h3>
-<table>
-	<tr>
-		<th><h4>Шифр показателя эффективности</h4></th>
-		<th><h4>Показатель</h4></th>
-		<th width="120"><h4>Оценка</h4></th>
-	</tr>
-	<% for(let u = 0; u < kpi.length; u++) {%>
-		<% if(kpi[u].length != 0) {%>
-			<tr>
-				<td><h4><%=kpi[u][0].section[0] + "." %></h4></td>
-				<td colspan="2"><h4 class="razdel">Раздел <%=(u+1) + ". " + kpi[u][0].section %></h4></td>
-			</tr>
-			<% for(let i = 0; i < kpi[u].length; i++) {%>
-				<% let arr = kpi[u]; %>
-				<% if(arr[i].type == 1) {%>
-					<tr>
-						<td><%=arr[i].name %></td>
-						<td><%=arr[i].description %></td>
-						<td><big><%=arr[i].userBall[0] %></big></td>
-					</tr>
-				<%} %>
-				<% if(arr[i].type == 2) {%>
-					<tr>
-						<td rowspan=<%=(arr[i].countCriterion + 1) + "" %>><%=arr[i].name %></td>
-						<td colspan="2"><%=arr[i].description %></td>
-					</tr>
-					<% for(let j = 0; j < arr[i].countCriterion; j++) {%>
-					<tr>
-						<td><%=arr[i].criterion[j].description %></td>
-						<td><big><%=arr[i].userBall[j] %></big></td>
-					</tr>
+<h4>Оценки ПЭД за выбранный период:</h4>
+<table class="table table-bordered bg-white">
+	<thead>
+		<tr>
+			<th scope="col" width="10%"><h4>Шифр</h4></th>
+			<th scope="col"><h4>Показатель</h4></th>
+			<th scope="col" width="15%"><h4>Оценка</h4></th>
+		</tr>
+	</thead>
+	<tbody>
+		<% for(let u = 0; u < kpi.length; u++) {%>
+			<% if(kpi[u].length != 0) {%>
+				<tr>
+					<td><h5><%=kpi[u][0].section[0] + "." %></h5></td>
+					<td colspan="2"><h5>Раздел <%=(u+1) + ". " + kpi[u][0].section %></h5></td>
+				</tr>
+				<% for(let i = 0; i < kpi[u].length; i++) {%>
+					<% let arr = kpi[u]; %>
+					<% if(arr[i].type == 1) {%>
+						<tr>
+							<th scope="row"><%=arr[i].name %></th>
+							<td><%=arr[i].description %></td>
+							<td><big><%=arr[i].userBall[0] %></big></td>
+						</tr>
+					<%} %>
+					<% if(arr[i].type == 2) {%>
+						<tr>
+							<th scope="row" rowspan=<%=(arr[i].countCriterion + 1) + "" %>><%=arr[i].name %></th>
+							<td colspan="2"><%=arr[i].description %></td>
+						</tr>
+						<% for(let j = 0; j < arr[i].countCriterion; j++) {%>
+						<tr>
+							<td><%=arr[i].criterion[j].description %></td>
+							<td><big><%=arr[i].userBall[j] %></big></td>
+						</tr>
+						<%} %>
 					<%} %>
 				<%} %>
 			<%} %>
 		<%} %>
-	<%} %>
+	</tbody>
 </table>
 <%} %>
 <% if(!kpi) {%>
