--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<p>Федеральное государственное бюджетное образовательное учреждение высшего образования Московский Технический Университет Связи и Информатики</p>
+<small>Федеральное государственное бюджетное образовательное учреждение высшего образования Московский Технический Университет Связи и Информатики</small>
