--- a/views/pps/partials/menu.ejs
+++ b/views/pps/partials/menu.ejs
@@ -7,7 +7,7 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="/my-page">Посчитать оценки <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="/my-page">Вычислить оценки <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="/my-page/edit-kpi">Отметить выполнение</a>
