--- a/views/pps/main_page.ejs
+++ b/views/pps/main_page.ejs
@@ -6,21 +6,27 @@
 </head>
 <body>
 	<%- include("partials/menu.ejs") %>
-	<div class="container-fluid px-md-5">
-		<h4><div id="name"><%=name %>, <%=position %></div></h4>
-		<hr>
-		<% if(objPeriod.notify) {%>
-			<p style="color: red; font-size: 20px;">Внимание! Расчет оценок будет производиться за период с <%=objPeriod.date1Str %> по <%=objPeriod.date2Str %></p>
-		<%} %>
-		<form name="date" action="/my-page" class="text" method="get">
-			<label>Период расчета оценок с </label>
-			<input type="date" name="date1" id="date1" class="date" value=<%=date1 %> required>
-			<label> по </label>
-			<input type="date" name="date2" id="date2" class="date" value=<%=date2 %> required>
-			<button id="date" >Вывести оценки ПЭД за данный период</button>
-		</form>
-		<div id="donekpi"><%- include("partials/table_kpi.ejs") %></div>
-		<br/>
+	<div class="container-fluid px-md-5 wrapper">
+		<div class="content">
+			<h4><div id="name"><%=name %>, <%=position %></div></h4>
+			<hr>
+			<% if(objPeriod.notify) {%>
+				<p style="color: red; font-size: 20px;">Внимание! Расчет оценок будет производиться за период с <%=objPeriod.date1Str %> по <%=objPeriod.date2Str %></p>
+			<%} %>
+			<form name="date" action="/my-page" class="text" method="get">
+				<div class="form-row">
+					<div class="col-sm">
+						<label>Период расчета оценок с </label>
+						<input type="date" name="date1" id="date1" class="date" value=<%=date1 %> required>
+						<label> по </label>
+						<input type="date" name="date2" id="date2" class="date" value=<%=date2 %> required>
+						<button class="btn btn-outline-dark" id="date" >Вывести оценки ПЭД за данный период</button>
+					</div>
+				</div>
+			</form>
+			<div id="donekpi"><%- include("partials/table_kpi.ejs") %></div>
+			<br/>
+		</div>
 
 		<div class="footer">
 			<%- include("../partials/footer.ejs") %>
